2002-01-23  Radek Doulik  <rodo@ximian.com>

	* added Text... and Paragraph... entries to menu

	* editor-control-factory.c (editor_api_command): use
	popup_show_at_cursor instead of popup_show

	* popup.c (popup_show_at_cursor): new function, shows popup menu
	at text cursor position
	(set_position): helper function for popup_show_at_cursor

2002-01-15  Ettore Perazzoli  <ettore@ximian.com>

	* spell.c (spell_create_language_menu): Just return if cd->dict is
	NIL.

2002-01-14  Radek Doulik  <rodo@ximian.com>

	* menubar.c: implemented Format/Page...

	* GNOME_GtkHTML_Editor.xml.in: added Format/Page...

2002-01-08  Radek Doulik  <rodo@ximian.com>

	* dialog.c (run_dialog): run dialog to make it modal

	* properties.c (gtk_html_edit_properties_dialog_new): set dialog parent

	* dialog.c (run_dialog): set dialog parent

2002-01-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (GTKHTML_EDITOR_SOURCES_COMMON): removed link.[ch]

	* text.c (text_properties): place bold/italic/underline/strikeout
	in 2x2 table

	* body.c (body_properties): set pixmap entry preview to FALSE

2001-12-11  Radek Doulik  <rodo@ximian.com>

	* added new link dialogs to glade, added new percent option value
	in image editor - Follow, this makes dimension follow original
	aspect ratio and other dimension

2001-12-09  Radek Doulik  <rodo@ximian.com>

	* image.c (get_data): avoid calling g_strconcat with NULL as 1st
	parameter
	(set_ui): avoid setting NULL as text for entries
	(insert_or_apply): use Text color for non-linked images

2001-11-20  Radek Doulik  <rodo@ximian.com>

	* search.c (gtk_html_search_dialog_new): as below

	* replace.c (gtk_html_replace_dialog_new): don't limit entries to
	20 characters

	* properties.c (gtk_html_edit_properties_dialog_destroy): destroy
	dialog, if it wasn't yet

	* control-data.c (gtk_html_control_data_destroy): destroy
	properties_dialog

	* popup.c (property_dialog_show): set items to 0 before preparing
	dialog